import Logic from '../logic/logic';

class Main {
    constructor() {
        const logic = new Logic();
        logic.execute();
    }
}

new Main();
